# whisperfish

./: .dockerignore  .gitignore  .gitlab-ci.yml  .triage-policies.yml  .weblate  CODEOWNERS  Cargo.toml  ChangeLog.md  ChangeLog.rst  Dockerfile.builder  README.md  README.rst  be.rubdos.whisperfish.service  build.rs  coverage.sh  create-database.sh  deny.toml  diesel.toml  dotenv.example  fetch-release-from-gitlab.sh  harbour-whisperfish-message.conf  harbour-whisperfish-sailjail.service  harbour-whisperfish.desktop  harbour-whisperfish.privileges  harbour-whisperfish.pro  harbour-whisperfish.profile  harbour-whisperfish.service  live-patch.sh  rootCA.crt  rubdos.key  run.sh  target_at_least.sh  update-translations.sh
.ci/: armv7hl.sh  build-for-target.sh  build-shareplugin.sh  build-with-mb2.sh  build.sh  cargo-update.sh  cargo.toml  check-translations.sh  i486.sh  load-ssh-key  master-update-translations.sh  send-matrix-build-notification.sh  update-translation-badge.py  update-translation-contributors.sh  update-translations.sh  upload-rpms.sh
.github/: FUNDING.yml
.gitlab/: dependabot.yml
.rpm/: harbour-whisperfish.spec
benches/: storage.rs
create-store/: Cargo.toml
create-store/src/: main.rs
doc/: dev-env-hacks.md  dev-env-hacks.rst  rescue-instructions.md  rescue-instructions.rst
fetch-signal-attachment/: Cargo.toml
fetch-signal-attachment/src/: main.rs
harbour-whisperfish/: Cargo.toml
harbour-whisperfish/src/: lib.rs  main.rs
harbour-whisperfish/src/model/: prompt.rs
icons-src/: Emojis.md
qmeta-async/: Cargo.toml
qml/: harbour-whisperfish-main.qml  harbour-whisperfish.qml  share-ui.qml
rpm/: harbour-whisperfish.spec  harbour-whisperfish.yaml  qmake-sailfish
shareplugin/: README.md  WhisperfishPluginInfo.cpp  WhisperfishPluginInfo.h  WhisperfishShare.qml  WhisperfishSharePlugin.h  WhisperfishSharing.permission  WhisperfishTransfer.cpp  WhisperfishTransfer.h  WhisperfishTransferPlugin.cpp
shareplugin_v1/: .gitignore  Makefile  README.md  WhisperfishPluginInfo.cpp  WhisperfishPluginInfo.h  WhisperfishShare.qml  WhisperfishTransfer.cpp  WhisperfishTransfer.h  WhisperfishTransferPlugin.cpp  WhisperfishTransferPlugin.h  shareplugin.pro
shareplugin_v2/: WhisperfishPluginInfo.cpp  WhisperfishPluginInfo.h  WhisperfishShare.qml  WhisperfishSharePlugin.cpp  WhisperfishSharePlugin.h  shareplugin.pro
sqlcipher/: get-sqlcipher.sh  v3.4.1.tar.gz.sha256sum  v3.4.2.tar.gz.sha256sum
src/: gui.rs  harbour-whisperfish.cpp  lib.rs  main.rs  model.rs  qmlapp.rs  qrc.rs  schema.patch  schema.rs  settings.rs  sfos.rs  store.cpp  store.hpp  store.rs  whisperfish.hpp
tests/: migrations.rs  model_message.rs  qtokioeventdispatcher.rs  recipient_processing.rs  storage_migration.rs  store_message.rs  (+2 more)
whisperfish/: Cargo.toml  build.rs
whisperfish-migration-dry-run/: Cargo.toml
whisperfish-migration-dry-run/src/: main.rs
whisperfish-qt/: Cargo.toml  build.rs
whisperfish-qt/src/: lib.rs  settings.rs
whisperfish-store/: Cargo.toml  build.rs
whisperfish-store/benches/: storage.rs
whisperfish-store/src/: config.rs  lib.rs  schema.patch  schema.rs  store.rs
whisperfish-store/src/config/: signalconfig.rs
whisperfish-store/src/store/: encryption.rs  migrations.rs  observer.rs  orm.rs  protocol_store.rs  utils.rs
whisperfish-store/src/store/migrations/: session_to_db.rs
whisperfish-store/src/store/migrations/session_to_db/: quirk.rs
whisperfish-store/src/store/observer/: orm_interests.rs
whisperfish-store/src/store/orm/: sql_types.rs
whisperfish-store/tests/: go_migrations.rs  recipient_processing.rs  storage_migration.rs  store.rs  test_store_utils.rs
whisperfish-store/tests/common/: mod.rs
whisperfish-store/tests/migrations/: orm.rs
whisperfish-store/tests/resources/storage_migration/with-password-123456-2022-06/db/: salt
whisperfish-store/tests/resources/storage_migration/with-password-123456-2022-06/storage/identity/: http_signaling_key  remote_5844fce4-4407-401a-9dbc-fc86c6def4e6
whisperfish/benches/: storage.rs
whisperfish/src/: actor.rs  config.rs  gui.rs  gui_traits.rs  lib.rs  model.rs  platform.rs  qblurhashimageprovider.rs  qtlog.rs  schema.patch  schema.rs  service.rs  store.rs  worker.rs
whisperfish/src/actor/: message.rs  messageactor.rs  session.rs  sessionactor.rs
whisperfish/src/actor/message/: methods.rs
whisperfish/src/actor/messageactor/: methods.rs
whisperfish/src/actor/session/: methods.rs  typing_notifications.rs
whisperfish/src/actor/sessionactor/: methods.rs  typing_notifications.rs
whisperfish/src/config/: settings.rs  signalconfig.rs
whisperfish/src/model/: active_model.rs  attachment.rs  contact.rs  create_conversation.rs  device.rs  group.rs  grouped_reactions.rs  message.rs  messages.rs  prompt.rs  reactions.rs  recipient.rs  session.rs  sessions.rs
whisperfish/src/schema/: migrations.rs
whisperfish/src/schema/migrations/: corrected_datatypes.rs
whisperfish/src/store/: encryption.rs  observer.rs  orm.rs  protocol_store.rs  utils.rs
whisperfish/src/store/migrations/: session_to_db.rs
whisperfish/src/store/observer/: orm_interests.rs
whisperfish/src/store/orm/: sql_types.rs
whisperfish/src/store/protocol_store/: quirk.rs
whisperfish/src/worker/: client.rs  profile_refresh.rs  setup.rs
whisperfish/src/worker/client/: groupv2.rs  linked_devices.rs  migrations.rs  profile.rs  profile_upload.rs  unidentified.rs
whisperfish/src/worker/client/migrations/: e164_to_uuid.rs  groupv2.rs  parse_reactions.rs  session_to_db.rs  whoami.rs
whisperfish/src/worker/client/migrations/session_to_db/: quirk.rs
whisperfish/tests/: go_migrations.rs  recipient_processing.rs  storage_migration.rs  store.rs  test_migrations.rs  test_recipient_processing.rs  test_storage_migration.rs  test_store.rs  test_store_message.rs  test_store_utils.rs
whisperfish/tests/common/: mod.rs
whisperfish/tests/migrations/: orm.rs
whisperfish/tests/resources/storage_migration/without-password-2022-06/storage/identity/: remote_5844fce4-4407-401a-9dbc-fc86c6def4e6  remote_7bec59e1-140d-4b53-98f1-dc8fd2c011c8
(+284 files in other folders)
