cargo-features = ["strip"]

[package]
name = "harbour-whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
build = "build.rs"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS."

[[bench]]
name = "storage"
harness = false

[dependencies]
async-trait = "0.1"
bincode = "1.2.1"
actix = "0.12"
rand = "0.7"
parking_lot = "0.12"
dbus = "0.9"
uuid = { version = "0.8", features=["v4"] }
mime = "0.3.16"
mime_guess = "2.0"
mime_classifier = "0.0.1"
actix-rt = "2.7.0"
chrono = "0.4"
tokio = { version="1.17.0", features=["time", "io-util", "net", "sync"] }
futures = "0.3"
fs_extra = "1.2.0"

# 1.9.1 requires Rust 2021
indexmap = "=1.8.1"

# 3.0.0-rc.1 requires Rist 1.54
actix-http = "=3.0.0-beta.19"

# ServiceCipher::new() takes 8 arguments after this, Whisperfish currently supplies 6
libsignal-service = { git = "https://github.com/Michael-F-Bryan/libsignal-service-rs", rev = "4341b4fbff6b97a2b7ff2017f365a13dcecc0a49" }
libsignal-service-actix = { git = "https://github.com/Michael-F-Bryan/libsignal-service-rs", rev = "4341b4fbff6b97a2b7ff2017f365a13dcecc0a49" }

libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", branch = "main" }
zkgroup = { version = "0.9.0", git = "https://github.com/signalapp/libsignal-client", branch = "main" }

# Newer versions break MSRV in patch version
proc-macro2 = "=1.0.26"
quote = "=1.0.10"

# Newer versions don't compile with Rust 1.52 (nightly-2021-05-06),
# which is what Sailfish SDK 3.9.3 (4.4.0.58) comes with
# Due to that, we need to pin the sha2 and sha-1 versions too.
pbkdf2 = { version = "=0.9.0", default-features = false }
hmac = "=0.11"
sha2 = "=0.9"
sha-1 = "=0.9"
aes = "0.7"
block-modes = "0.8"

qttypes = "=0.2.6"
qmetaobject = { version = "=0.2.5" }
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }
time = "=0.3.5"
scrypt = { version = "=0.8.1", default-features = false, features=["std"] }

getrandom = "0.2"

cpp = "0.5"
dirs = "4.0"
anyhow = "1.0"
thiserror = "1"
log = "0.4"
env_logger = "0.9"
single-instance = "0.3.3"
hex = "0.4"
phonenumber = "0.3"
itertools = "0.10.3"
qrcode = "0.12"
image = { version = "0.23", default-features = false, features=["png"] }

# Diesel 2.0.0 should fix the Clippy lint failure;
# please see .gitlab.ci.yml for details.
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"
libsqlite3-sys = { version = "0.22.2", features = ["sqlcipher"] }

serde = {version = "1.0", features = ["derive"]}

# Serde 0.8.26 requires Rust 1.56 (aka edition 2021)
serde_yaml = "=0.8.25"

base64 = "0.13"

prost = "0.9"

tempdir = "0.3"

structopt = "0.3"

rpassword = "5.0"
secrecy = "0.7"

regex = "1.5"

sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git", optional = true }

[build-dependencies]
cpp_build = "0.5"
cc = "1.0"
anyhow = "1.0"
prost-build = "0.9"

[dev-dependencies]
# Git version for async tests. 0.6.5 will contain this feature,
# so revert to crates.io on release
criterion = "0.3"
rstest = { version = "0.10" }
rstest_reuse = { version = "0.1.0" }

# Smart dev mode: Compile most stuff in release mode, except for the things
# that are actually maintained by our community
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.libsignal-protocol]
opt-level = 0

[profile.dev.package.libsignal-service]
opt-level = 0

[profile.dev.package.libsignal-service-actix]
opt-level = 0

[profile.dev.package.qmetaobject]
opt-level = 0

[profile.release]
# This flag is set in CI using CARGO_PROFILE_RELEASE_LTO=thin
# lto = "thin"
debug = true

[features]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]
sailfish = ["bundled-sqlcipher", "sailors", "libsignal-protocol/whisperfork", "zkgroup/whisperfork"]
harbour = ["sailfish"]

[patch."https://github.com/signalapp/libsignal-client"]
libsignal-protocol = { git = "https://gitlab.com/whisperfish/libsignal-client", branch = "whisperfork" }
zkgroup = { git = "https://gitlab.com/whisperfish/libsignal-client", branch = "whisperfork" }

# [patch.crates-io]
# qmetaobject = { path="../qmetaobject-rs/qmetaobject" }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', branch = 'lizard2' }
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite", rev = "8770e7d4433de942122d37f073dd80519a8d67c0" }

# [patch."https://github.com/Michael-F-Bryan/libsignal-service-rs"]
# libsignal-service = { path = "/home/rsmet/src/libsignal-service-rs/libsignal-service" }
# libsignal-service-actix = { path = "/home/rsmet/src/libsignal-service-rs/libsignal-service-actix/" }
