cargo-features = ["strip"]

[package]
name = "create-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish, mainly used to test storage"

[dependencies]
whisperfish = { path = "../whisperfish" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.20.0" }
rand = "0.7"
pico-args = "0.5.0"
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", rev = "ddccf7431d7fe848ef8fbed487fc0d33fe385b23" }
actix-rt = "2.7.0"
env_logger = "0.9"
anyhow = "1.0"
uuid = { version = "1", features=["v4"] }
