cargo-features = ["strip"]

[package]
name = "create-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish, mainly used to test storage"

[dependencies]
whisperfish = { path = "../whisperfish" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.20.0" }
rand = "0.7"
structopt = "0.3"
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
actix-rt = "2.8.0"
env_logger = "0.9"
anyhow = "1.0"
uuid = { version = "1", features=["v4"] }
