cargo-features = ["strip"]

[package]
name = "fetch-signal-attachment"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish to fetch Signal attachments"

[dependencies]
whisperfish = { path = "../whisperfish" }
futures = "0.3"
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
libsignal-service-actix = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
structopt = "0.3"
mime_classifier = "0.0.1"
log = "=0.4.18"
anyhow = "1.0"
actix-rt = "2.8.0"
hex = "0.4"
mime = "0.3.17"
# Rust 1.52
env_logger = "=0.9.3"
uuid = { version = "=1.3.2", features=["v4"] }

[features]
bundled-sqlcipher = ["whisperfish/bundled-sqlcipher"]
sailfish = ["whisperfish/sailfish"]
harbour = ["whisperfish/harbour"]
