cargo-features = ["strip"]

[package]
name = "harbour-whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS."

[dependencies]
whisperfish = { path = "../whisperfish" }
dbus = "0.9"
single-instance = "0.3.3"
log = "0.4"
anyhow = "1.0"
structopt = "0.3"
env_logger = "0.9"

[features]
bundled-sqlcipher = ["whisperfish/bundled-sqlcipher"]
sailfish = ["whisperfish/sailfish"]
harbour = ["whisperfish/harbour"]
