cargo-features = ["strip"]

[package]
name = "harbour-whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS."

[dependencies]
whisperfish = { path = "../whisperfish" }
dbus = "0.9"
single-instance = "0.3.3"
log = "0.4"
simplelog = "0.11.2"
log-panics = { version = "2", features = ["with-backtrace"]}
anyhow = "1.0"
structopt = "0.3"
chrono = "0.4"
regex = "1.8.1"

[features]
bundled-sqlcipher = ["whisperfish/bundled-sqlcipher"]
sailfish = ["whisperfish/sailfish"]
harbour = ["whisperfish/harbour"]
