cargo-features = ["strip"]

[package]
name = "whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
build = "build.rs"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS -- library."

[[bench]]
name = "storage"
harness = false

[dependencies]
async-trait = "0.1"
bincode = "1.2.1"
actix = "0.12"
rand = "0.7"
parking_lot = "0.12"
uuid = { version = "1", features=["v4"] }
mime = "0.3.17"
mime_guess = "2.0"
mime_classifier = "0.0.1"
chrono = "0.4"
tokio = { version="1.17.0", features=["time", "io-util", "net", "sync"] }
futures = "0.3"
fs_extra = "1.2.0"

# 1.9.1 requires Rust 2021
indexmap = "=1.8.1"

# 3.0.0-rc.1 requires Rist 1.54
actix-http = "=3.0.0-beta.19"

libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
libsignal-service-actix = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }

libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.21.1" }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.21.1" }

proc-macro2 = "=1.0.43" # 1.0.44: unknown feature `proc_macro_span_shrink`
quote = "=1.0.10"

# Newer versions don't compile with Rust 1.52 (nightly-2021-05-06),
# which is what Sailfish SDK 3.9.3 (4.4.0.58) comes with
# Due to that, we need to pin the sha2 and sha-1 versions too.
pbkdf2 = { version = "=0.9.0", default-features = false }
hmac = "=0.11"
sha2 = "=0.9"
sha-1 = "=0.9"
aes = "0.7"
block-modes = "0.8"
once_cell = "=1.14.0"
cmake = "=0.1.48"
rustls = "=0.20.6"

qttypes = "=0.2.6"
qmetaobject = { version = "=0.2.5" }
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }
time = "=0.3.5"
scrypt = { version = "=0.8.1", default-features = false, features=["std"] }

getrandom = "0.2"

cpp = "0.5"
dirs = "4.0"
anyhow = "1.0"
thiserror = "1"
log = "0.4"
hex = "0.4"
phonenumber = "0.3"
itertools = "0.10.3"
qrcode = "0.12"
image = { version = "0.23", default-features = false, features=["png"] }

diesel = { version = "2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
libsqlite3-sys = { version = "0.25.2", features = ["sqlcipher"] }

serde = {version = "1.0", features = ["derive"]}

# Serde 0.8.26 requires Rust 1.56 (aka edition 2021)
serde_yaml = "=0.8.25"

base64 = "0.13"

prost = "0.10"

tempfile = { version = "3.4.0", default-features = false }

rpassword = "5.0"
secrecy = "0.7"

regex = "1.5"

sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git", optional = true }

[build-dependencies]
cpp_build = "0.5"
cc = "1.0"
anyhow = "1.0"
prost-build = "0.10"

[dev-dependencies]
actix-rt = "2.8.0"
# Git version for async tests. 0.6.5 will contain this feature,
# so revert to crates.io on release
criterion = "0.3"
env_logger = "0.9"
rstest = { version = "0.10" }
rstest_reuse = { version = "0.1.0" }

[features]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]
sailfish = ["bundled-sqlcipher", "sailors", "libsignal-protocol/whisperfork", "zkgroup/whisperfork"]
harbour = ["sailfish"]
